crates/deadhand-cli/src/render/snapshots/deadhand__render__text__tests__scan_aliases.snap
---
source: crates/deadhand-cli/src/render/text.rs
expression: "super::scan(&scan_fixture(name), 5, false, None)"
---
╭──────────────────────────────────────────────╮
│                DEADHAND AUDIT                │
│                                              │
│ Readability                     100 / 100    │
│ Cognitive Load                  100 / 100    │
│ Entanglement                    100 / 100    │
│ Context Depth                   100 / 100    │
│ Blast Radius                    100 / 100    │
│ Pattern Drift                   100 / 100    │
│ Orphaned Code                   n/a          │
│                                              │
│ MAINTAINABILITY                 100 / 100    │
╰──────────────────────────────────────────────╯

Worst modules:
  src/helpers/index.ts      100   
  src/index.ts              100   
  src/lib/clamp.ts          100   
  src/math/add.ts           100   
  src/meta.ts               100   

note: churn unknown (no git history); churn factor fixed at 1
note: coverage unknown; coverage factor fixed at 1
note: no git history; Orphaned Code skipped
note: Orphaned Code unavailable; its weight was redistributed across the other metrics

5 files (0 tests) · 10 LOC · 4 functions
