crates/deadhand-cli/src/render/snapshots/deadhand__render__text__tests__scan_cycles.snap
---
source: crates/deadhand-cli/src/render/text.rs
expression: "super::scan(&scan_fixture(name), 5, false, None)"
---
╭──────────────────────────────────────────────╮
│                DEADHAND AUDIT                │
│                                              │
│ Readability                     100 / 100    │
│ Cognitive Load                  100 / 100    │
│ Entanglement                     75 / 100    │
│ Context Depth                   100 / 100    │
│ Blast Radius                    100 / 100    │
│ Pattern Drift                   100 / 100    │
│ Orphaned Code                   n/a          │
│                                              │
│ MAINTAINABILITY                  95 / 100    │
╰──────────────────────────────────────────────╯

high 5 modules participate in circular dependencies

Worst modules:
  src/a.ts                   90   Entanglement
  src/b.ts                   90   Entanglement
  src/c.ts                   90   Entanglement
  src/d.ts                   93   Entanglement
  src/e.ts                   93   Entanglement

note: churn unknown (no git history); churn factor fixed at 1
note: coverage unknown; coverage factor fixed at 1
note: no git history; Orphaned Code skipped
note: Orphaned Code unavailable; its weight was redistributed across the other metrics

8 files (0 tests) · 16 LOC · 8 functions
