crates/deadhand-cli/src/render/snapshots/deadhand__render__text__tests__scan_drift.snap
---
source: crates/deadhand-cli/src/render/text.rs
expression: "super::scan(&scan_fixture(name), 5, false, None)"
---
╭──────────────────────────────────────────────╮
│                DEADHAND AUDIT                │
│                                              │
│ Readability                      26 / 100 !  │
│ Cognitive Load                   26 / 100 !  │
│ Entanglement                    100 / 100    │
│ Context Depth                   100 / 100    │
│ Blast Radius                     99 / 100    │
│ Pattern Drift                    30 / 100 !  │
│ Orphaned Code                   n/a          │
│                                              │
│ MAINTAINABILITY                  65 / 100    │
╰──────────────────────────────────────────────╯

warn 8 functions exceed the repo cognitive complexity baseline (15)
warn 8 functions nest 4+ levels deep
info 1 modules deviate from their peer group

Worst modules:
  src/services/legacyReport.ts   53   Cognitive Load, Readability
  src/repositories/repo.ts       93   Blast Radius
  src/services/carts.ts         100   
  src/services/invoices.ts      100   
  src/services/orders.ts        100   

note: churn unknown (no git history); churn factor fixed at 1
note: coverage unknown; coverage factor fixed at 1
note: no git history; Orphaned Code skipped
note: Orphaned Code unavailable; its weight was redistributed across the other metrics

8 files (0 tests) · 177 LOC · 22 functions
